--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 <div class="description">
                     <h3>O Palestrante</h3>
                     <p>Rogério Coutinho é conhecido por dar palestras sobre a implementação da LGPD.
-                    Prepara-se para sair do evento com uma nova visão sobre o impacto da LGPD e o que é possivel ser feito para o seu negócio está a frente nesse assunto.
+                    Prepare-se para sair do evento com uma nova visão sobre o impacto da LGPD e o que é possivel ser feito para o seu negócio está à frente nesse assunto.
                     </p>
                     <p>
                     Diretor de Operações da Podium Tecnologia e Founder & CTO da SimpleWay. Formado em Engenharia de Computação e tem atuação a mais de 20 anos com Proteção de Dados. Ao longo desse período tem atuado em projetos e clientes de diversos portes e setores, nos pilares de Segurança da Informação, Privacidade e Continuidade de Negócios.
